Thoth History
================================================================================

Version 0.2.0 (?)
  * Updated to work with bleeding-edge Ramaze (currently 0.3.9.5 in the Ramaze
    Darcs repo).
  * Added --adapter command line option and server.adapter config option to
    specify a different Ramaze server adapter to use (the default is Thin).
  * Added --migrate command line option to automatically upgrade or downgrade
    a Thoth database schema.
  * Added site.enable_comments setting. Set this to false if you don't want
    users to be able to post comments on your blog.
  * Added server.enable_minify setting. When enabled, all CSS under /css and all
    JavaScript under /js will be minified on the fly.
  * Pagination bars now include links to up to nine nearby result pages in
    addition to the prev/next links.
  * Views are compiled by default in production mode, which improves performance
    significantly. To disable view compilation, set server.compile_views to
    false.
  * All admin forms validate a session-specific form token on submission to
    prevent cross-site request forgery attacks.
  * The Flickr and Delicious plugins are now included in the main Thoth gem.
  * The Flickr and Delicious plugins have been modified to take advantage of
    Ramaze's improved value cache rather than handling their own caching.
  * Fixed incorrect default paths for the theme.public, theme.view, and media
    config settings.
  * Fixed the --home command line option.

Version 0.1.4 (2008-04-15)
  * Fixed a nasty bug introduced in 0.1.3 that caused a memory leak and resulted
    in the index page (/) not being cached properly.

Version 0.1.3 (2008-04-13)
  * When creating or editing a blog post or page, the preview is displayed above
    the edit form rather than below it.
  * Spaces in blog post URLs are replaced with - rather than _ (this change will
    only affect new posts; existing post URLs will not be changed).