@@ -3,7 +3,7 @@ Thoth History
 
 Version 0.2.0 (?)
   * Updated to work with bleeding-edge Ramaze (currently 0.3.9.5 in the Ramaze
-    Darcs repo).
+    git repo).
   * Added --adapter command line option and server.adapter config option to
     specify a different Ramaze server adapter to use (the default is Thin).
   * Added --migrate command line option to automatically upgrade or downgrade
@@ -22,6 +22,7 @@ Version 0.2.0 (?)
   * The Flickr and Delicious plugins are now included in the main Thoth gem.
   * The Flickr and Delicious plugins have been modified to take advantage of
     Ramaze's improved value cache rather than handling their own caching.
+  * Added a Twitter plugin.
   * Fixed incorrect default paths for the theme.public, theme.view, and media
     config settings.
   * Fixed the --home command line option.
